--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
   --dark-pop-color: #2ecaab;
   --tertiary-color: #180979;
   letter-spacing: 1px;
+  /* background: var(--secondary-color); */
 }
 
 
