--- a/src/CSS/LoadPage.css
+++ b/src/CSS/LoadPage.css
@@ -2,7 +2,7 @@
     /* border: 1px solid red; */
     height: 100vh;
     /* z-index: 100; */
-    position: fixed;
+    /* position: fixed; */
     background-color: var(--secondary-color);
     width: 100%;
     /* height: 100%; */
