--- a/src/CSS/LoadPage.css
+++ b/src/CSS/LoadPage.css
@@ -4,12 +4,13 @@
     /* z-index: 100; */
     /* position: fixed; */
     background-color: var(--secondary-color);
-    width: 100%;
+    /* width: 100%; */
     /* height: 100%; */
     /* display: flex;
     flex-direction: column; */
     /* animation: fadeaway 3.6s; */
     /* opacity: .2; */
+    /* z-index: 1; */
 
 }
 
