--- a/src/CSS/Skills.css
+++ b/src/CSS/Skills.css
@@ -6,6 +6,7 @@
     /* color: var(--main-color) */
     color: var(--tertiary-color);
     /* color: var(--secondary-color) */
+    /* z-index: 100; */
 }
 
 .about-description {
