Added responsiveness to mobile

--- a/src/CSS/Skills.css
+++ b/src/CSS/Skills.css
@@ -94,28 +94,27 @@
     gap: .5rem ;
 }
 
+@media all and (max-width: 420px) { 
+
+    .icon-container {
+/* width: clamp(100px, 50%, 125px) */
+min-width: 100px;
+max-width: 125px;
+    }
+
+    .icon-row {
+        align-items: center;
+        justify-content: center;
+    }
+}
 
 
-/* .row-icon-container > * {
-    border: 1px solid red;
-} */
 .icon-header,
 .about-description>*,
 .skills-head {
     --animate-delay: .25s;
 }
 
-
-/* .row-icon-container > * {
-    border: 1px solid black;
-}
-
-.icon-header {
-    border: 1px solid red;
-} */
- /* {
-    border: 1px solid red;
-} */
 
 .icon-container:nth-child(1) {
     /* border: 1px solid red; */
