--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -18,6 +18,22 @@
     /* border: 1px solid red; */
 }
 
+@media all and (max-width: 400px) {
+   #jacky-svg { 
+    left: 50%;
+    top: 85.5%;
+    bottom: 0;
+    height: 30vh;
+    width: 40vh;
+    }
+
+
+    .top-home-heading, .bottom-home-heading {
+        font-size: 2.5rem;
+    }
+
+    
+}
 /* .catsvg {
     border: 1px solid red;
     height: 50px;
