--- a/src/CSS/Home.css
+++ b/src/CSS/Home.css
@@ -269,6 +269,7 @@
     margin-bottom: 20vh;
 }
 
+
 .heading-primary {
     font-size: 3rem;
     font-weight: 700;
@@ -308,6 +309,18 @@
 
 }
 
+.heading-button-link {
+    display: block;
+    /* border: 1px solid red !important; */
+    width: 100%;
+    /* padding: 1rem; */
+    text-decoration: none;
+    color: var(--tertiary-color)
+}
+
+.heading-button-link:hover {
+    color: var(--tertiary-color)
+}
 
 @keyframes reveal-subtext {
     from {
