--- a/src/CSS/Contact.css
+++ b/src/CSS/Contact.css
@@ -1,177 +1,168 @@
 .contact-section {
-    min-height: 100vh;
-    color: var(--tertiary-color);
-    /* text-transform: uppercase; */
-    position: relative;
+  min-height: 100vh;
+  color: var(--tertiary-color);
+  /* text-transform: uppercase; */
+  position: relative;
 }
 
 .form-header {
-    /* display: flex; */
+  /* display: flex; */
 }
 
 .contact-header-text {
-    /* position: relative; */
-    font-size: 3rem;
-    font-weight: 700;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-    /* border: 1px solid black; */
-
+  /* position: relative; */
+  font-size: 3rem;
+  font-weight: 700;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  /* border: 1px solid black; */
 }
 
 .contact-header-icon {
-    /* border: 1px solid red; */
+  /* border: 1px solid red; */
 }
 
 .message-header {
-    font-weight: 600;
-    margin-left: .6rem;
-    letter-spacing: 1px;
+  font-weight: 600;
+  margin-left: 0.6rem;
+  letter-spacing: 1px;
 }
 
 .message-container {
-    z-index: 2;
+  z-index: 2;
 }
 
-
 .new-media {
-    /* position: absolute; */
-    display: flex;
-    gap: 1.5rem;
-    /* left: 300px;
+  /* position: absolute; */
+  display: flex;
+  gap: 1.5rem;
+  /* left: 300px;
     bottom: 300px; */
-    /* border: 1px solid red; */
-    /* margin-top: 2rem; */
-    /* margin-right: 1rem */
+  /* border: 1px solid red; */
+  /* margin-top: 2rem; */
+  /* margin-right: 1rem */
 }
 
 .new-media svg {
-    /* border: 1px solid red; */
-    width: 1.5rem;
-    height: 1.5rem;
+  /* border: 1px solid red; */
+  width: 1.5rem;
+  height: 1.5rem;
 }
 
 .new-media a {
-    color: var(--tertiary-color);
-    transition: .2s;
-    fill: var(--tertiary-color)
+  color: var(--tertiary-color);
+  transition: 0.2s;
+  fill: var(--tertiary-color);
 }
 
 .new-media a:hover {
-    color: var(--dark-pop-color);
-    cursor: pointer;
-    transform: translateY(-2px);
-    fill: var(--dark-pop-color)
+  color: var(--dark-pop-color);
+  cursor: pointer;
+  transform: translateY(-2px);
+  fill: var(--dark-pop-color);
 }
 
 .contact-container {
-    /* border: 1px solid black; */
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    /* border: 3px solid var(--tertiary-color); */
-    box-shadow: 1px 1px 5px;
-    border-radius: 1rem;
-    padding: 3rem;
-    --animate-delay: .5s;
-    background-color: var(--secondary-color);
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  /* border: 3px solid var(--tertiary-color); */
+  box-shadow: 1px 1px 5px;
+  border-radius: 1rem;
+  padding: 3rem;
+  --animate-delay: 0.5s;
+  background-color: var(--secondary-color);
 }
 
 .contact-section form {
-    /* position: relative; */
-    display: flex;
-    flex-direction: column;
-    gap: 1.5rem;
-    /* justify-content: center;
+  /* position: relative; */
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  /* justify-content: center;
     align-items: center;
     border: 1px solid red; */
 }
 
-
 .contact-section form button {
-    /* border: 2px solid var(--tertiary-color); */
-    /* align-self: start; */
-    background-color: var(--dark-pop-color);
-    color: var(--tertiary-color);
-    font-size: 1rem;
-    font-weight: 600;
-    letter-spacing: 1px;
-    padding: .75rem 1.25rem;
-    border: none;
-    box-shadow: 1px 1px 4px;
-    border-radius: .25rem;
-    /* border: 1px solid #ced4da */
-    transition: .2s ease-in-out;
-    /* box-shadow: 0 10px 30px -15px; */
+  /* border: 2px solid var(--tertiary-color); */
+  /* align-self: start; */
+  background-color: var(--dark-pop-color);
+  color: var(--tertiary-color);
+  font-size: 1rem;
+  font-weight: 600;
+  letter-spacing: 1px;
+  padding: 0.75rem 1.25rem;
+  border: none;
+  box-shadow: 1px 1px 4px;
+  border-radius: 0.25rem;
+  /* border: 1px solid #ced4da */
+  transition: 0.2s ease-in-out;
+  /* box-shadow: 0 10px 30px -15px; */
 }
 
 .contact-section form button:hover {
-    background-color: var(--dark-pop-color);
-    color: var(--tertiary-color);
-    cursor: pointer;
-    transform: translateY(-1px) !important;
-    box-shadow: 1px 1px 10px 1px;
-
-
+  background-color: var(--dark-pop-color);
+  color: var(--tertiary-color);
+  cursor: pointer;
+  transform: translateY(-1px) !important;
+  box-shadow: 1px 1px 10px 1px;
 }
 
-.first-row-contact>* {
-    /* gap: 1rem */
-    /* border: 1px solid red; */
+.first-row-contact > * {
+  /* gap: 1rem */
+  /* border: 1px solid red; */
 }
 
 #contact-section .form-control {
-    /* border: 2px solid var(--tertiary-color); */
-    box-shadow: 1px 1px 4px;
-    /* border-bottom: 2px solid black; */
-    border-radius: .5rem !important;
-    /* transition: .5s ease-in-out; */
+  /* border: 2px solid var(--tertiary-color); */
+  box-shadow: 1px 1px 4px;
+  /* border-bottom: 2px solid black; */
+  border-radius: 0.5rem !important;
+  /* transition: .5s ease-in-out; */
 }
 
 #contact-section .form-control:focus {
-    /* color: var(--pop-color); */
-    border-color: #1b9e83;
-    box-shadow: 1px 1px 20px #1b9e83;
-    --dark-pop-color: #229780;
-    /* transition: 1s; */
+  /* color: var(--pop-color); */
+  border-color: #1b9e83;
+  box-shadow: 1px 1px 20px #1b9e83;
+  --dark-pop-color: #229780;
+  /* transition: 1s; */
 }
 
 /* #contact-section .form-control:focus {
     border: 1px solid red;
 } */
 
-
 .form-floating {
-    font-weight: 600;
-    letter-spacing: 1px;
+  font-weight: 600;
+  letter-spacing: 1px;
 }
 
 .form-control:focus {
-    box-shadow: none;
+  box-shadow: none;
 }
 
 .form-floating label {
-    color: var(--tertiary-color);
+  color: var(--tertiary-color);
 }
 
-.form-floating>.form-control:focus~label {
-    opacity: 1;
+.form-floating > .form-control:focus ~ label {
+  opacity: 1;
 }
 
-.catsleep{
-    position: absolute;
-    width: 40vw;
+.catsleep {
+  position: absolute;
+  width: 40vw;
 }
-
 
 /* sm breakpoint */
 @media all and (min-width: 0px) {
-    .catsleep {
-
-        visibility: hidden;
-    }
+  .catsleep {
+    visibility: hidden;
+  }
 }
-
 
 /* @media all and (min-width: 575px) {
     .catsleep {
@@ -188,94 +179,63 @@
 } */
 
 @media all and (min-width: 880px) {
+  .catsleep {
+    visibility: visible;
+    bottom: 30px;
+    left: 530px;
+    /* border: 1px solid pink; */
 
-    .catsleep {
-        visibility: visible;
-        bottom: 30px;
-        left: 530px;
-        /* border: 1px solid pink; */
-
-        /* max-width: 450px; */
-    }
+    /* max-width: 450px; */
+  }
 }
-
 
 /* lg breakpoint */
 @media all and (min-width: 992px) {
-    .catsleep {
-
-        bottom: 0px;
-        left: 590px;
-        /* border: 1px solid red; */
-
-        /* max-width: 450px; */
-    }
+  .catsleep {
+    bottom: 0px;
+    left: 590px;
+  }
 }
 
 @media all and (min-width: 1100px) {
-    .catsleep {
-
-        bottom: 0px;
-        left: 660px;
-        /* border: 1px solid red; */
-
-        /* max-width: 450px; */
-    }
+  .catsleep {
+    bottom: 0px;
+    left: 660px;
+  }
 }
 
 /* xl breakpoint */
 @media all and (min-width: 1200px) {
-    .catsleep {
-
-        bottom: -50px;
-        left: 700px;
-        /* border: 1px solid green; */
-
-        /* max-width: 450px; */
-    }
+  .catsleep {
+    bottom: -50px;
+    left: 700px;
+  }
 }
 
 @media all and (min-width: 1400px) {
-    .catsleep {
-
-        bottom: -50px;
-        left: 840px;
-        /* border: 1px solid purple; */
-
-        /* max-width: 450px; */
-    }
+  .catsleep {
+    bottom: -50px;
+    left: 840px;
+  }
 }
 
 @media all and (min-width: 1550px) {
-    .catsleep {
-
-        bottom: -80px;
-        left: 900px;
-        /* border: 1px solid purple; */
-
-        /* max-width: 450px; */
-    }
+  .catsleep {
+    bottom: -80px;
+    left: 900px;
+  }
 }
 
 @media all and (min-width: 1700px) {
-    .catsleep {
-
-        bottom: -40px;
-        left: 1000px;
-        /* border: 1px solid wheat; */
-
-        /* max-width: 450px; */
-    }
+  .catsleep {
+    bottom: -40px;
+    left: 1000px;
+  }
 }
 
-
 @media all and (min-width: 1850px) {
-    .catsleep {
-
-        bottom: -40px;
-        left: 1100px;
-        /* border: 1px solid wheat; */
- 
-        /* max-width: 450px; */
-    }
+  .catsleep {
+    bottom: -40px;
+    left: 1100px;
+  }
 }
