--- a/src/CSS/Skills.css
+++ b/src/CSS/Skills.css
@@ -1,140 +1,167 @@
 .skills-section {
-    /* background: #e4e1e1; */
-    min-height: 100vh;
-    /* background-color: var(--secondary-color); */
-    /* background-color: var(--tertiary-color); */
-    /* color: var(--main-color) */
-    color: var(--tertiary-color);
-    /* color: var(--secondary-color) */
-    /* z-index: 100; */
+  min-height: 100vh;
+  color: var(--tertiary-color);
 }
 
 .about-description {
-    letter-spacing: 1px;
-    line-height: 1.75;
-    
+  letter-spacing: 1px;
+  line-height: 1.75;
 }
 
 .skills-header {
-    font-size: calc(2.5rem + .5vw);
-    text-transform: uppercase;
-    font-weight: 600;
-    letter-spacing: 3px;
+  font-size: calc(2.5rem + 0.5vw);
+  text-transform: uppercase;
+  font-weight: 600;
+  letter-spacing: 3px;
 }
 
 .skills-subtext {
-    line-height: 1.75;
+  line-height: 1.75;
 }
 
-
-
 .experience-header {
-    /* font-size: 2.5rem; */
-    font-size: calc(2.25rem + .5vw);
-    font-weight: 600;
-    text-transform: uppercase;
-    letter-spacing: 3px;
+  /* font-size: 2.5rem; */
+  font-size: calc(2.25rem + 0.5vw);
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 3px;
 }
 
 .exp-card {
-    /* border: 1px solid var(--tertiary-color); */
-    box-shadow: 1px 1px 5px 0px;
-    background-color: var(--secondary-color);
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    margin-top: 1.5rem;
+  /* border: 1px solid var(--tertiary-color); */
+  box-shadow: 1px 1px 5px 0px;
+  background-color: var(--secondary-color);
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin-top: 1.5rem;
 }
 
 .exp-card p {
-    margin: 0;
+  margin: 0;
 }
 
 .exp-card-header {
-    font-size: calc(1.25rem + .05vw);
-    font-weight: 700;
-
+  font-size: calc(1.25rem + 0.05vw);
+  font-weight: 700;
 }
 
 .exp-card-subheader {
-    display: flex;
-    flex-direction: column;
-    gap: .20rem
-}
-
-.icon-header{
-    font-size: calc(1.25rem + .15vw);
-    font-weight: 700;
-    letter-spacing: 1px;
-    /* text-transform: uppercase; */
-}
-
-
-.icon-container {
-    /* border: 3px solid var(--tertiary-color); */
-    background-color: var(--secondary-color);
-    box-shadow: 1px 1px 3px ;
-    border-radius: .5rem;
-    width: 100px;
-    height: 100px;
-    padding: 1rem;
-    letter-spacing: 1px;
-    font-weight: 600;
-}
-
-.icon-container svg {
-    height: 50px;
-    width: 50px;
-    fill: var(--tertiary-color)
-}
-
-.row-icon-container {
-    display: flex;
-    /* border: 1px solid red; */
-    gap: .5rem ;
-}
-
-@media all and (max-width: 420px) { 
-
-    .icon-container {
-/* width: clamp(100px, 50%, 125px) */
-min-width: 110px;
-max-width: 125px;
-    }
-
-    .icon-row {
-        align-items: center;
-        justify-content: center;
-    }
-
-    .skills-information > div {
-        padding: 0 2rem !important;
-    }
-}
-
-
-.icon-header,
-.about-description>*,
-.skills-head {
-    --animate-delay: .25s;
-}
-
-
-.icon-container:nth-child(1) {
-    /* border: 1px solid red; */
-    --animate-delay: .25s
-}
-
-.icon-container:nth-child(2) {
-    /* border: 1px solid red; */
-    --animate-delay: .35s
-}
-.icon-container:nth-child(3) {
-    /* border: 1px solid red; */
-    --animate-delay: .45s
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
 }
 
 .icon-header {
-    /* border: 1px solid red; */
+  font-size: calc(1.25rem + 0.15vw);
+  font-weight: 700;
+  letter-spacing: 1px;
+  /* text-transform: uppercase; */
 }
 
+.icon-container {
+  /* border: 3px solid var(--tertiary-color); */
+  background-color: var(--secondary-color);
+  box-shadow: 1px 1px 3px;
+  border-radius: 0.5rem;
+  width: 120px;
+  height: 100px;
+  /* min-width: 100px; */
+  /* max-width: 100px; */
+  /* padding: 1rem; */
+  letter-spacing: 1px;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.icon-container svg {
+  height: 50px;
+  width: 100px;
+  fill: var(--tertiary-color);
+}
+
+.row-icon-container {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.bold {
+  /* font-weight: bold; */
+  /* color: var(--dark-pop-color); */
+  /* transition: 0.3s; */
+  font-weight: bold;
+  /* animation: pop 1s infinite; */
+  animation: crescendo 0.5s linear forwards;
+  /* transform: scale(1.5); */
+  display: inline-block;
+}
+
+@keyframes crescendo {
+  0% {
+    color: var(--tertiary-color);
+    /* font-weight: 400; */
+  }
+  100% {
+    color: var(--dark-pop-color);
+    /* font-weight: 700; */
+  }
+}
+
+/* @keyframes pop {
+      from {
+          
+      }
+  
+      to {
+          width: 100%;
+      }
+  } */
+.bold-text {
+  font-weight: bold;
+  /* transition: font-weight 3s ease !important; */
+  transition-duration: 3s !important ;
+}
+
+@media all and (max-width: 420px) {
+  .icon-container {
+    /* width: clamp(100px, 50%, 125px) */
+    min-width: 110px;
+    max-width: 125px;
+  }
+
+  .icon-row {
+    align-items: center;
+    justify-content: center;
+  }
+
+  .skills-information > div {
+    padding: 0 2rem !important;
+  }
+}
+
+.icon-header,
+.about-description > *,
+.skills-head {
+  --animate-delay: 0.25s;
+}
+
+.icon-container:nth-child(1) {
+  /* border: 1px solid red; */
+  --animate-delay: 0.25s;
+}
+
+.icon-container:nth-child(2) {
+  /* border: 1px solid red; */
+  --animate-delay: 0.35s;
+}
+.icon-container:nth-child(3) {
+  /* border: 1px solid red; */
+  --animate-delay: 0.45s;
+}
+
+.icon-header {
+  /* border: 1px solid red; */
+}
